--- a/_config.yml
+++ b/_config.yml
@@ -154,6 +154,7 @@ plugins:
 #     - vendor/gems/
 #     - vendor/ruby/
 exclude:
+    - css/Monokai.css
     - data/
     - includes/
     - layouts/
