--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,7 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 exclude:
+  - CSS/Syntax Highlighter.scss
   - data/
   - includes/
   - layouts/
