Update Liquid run commands file
- Add description to head of .liquidrc file

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/.liquidrc
+++ b/.liquidrc
@@ -1,4 +1,10 @@
 {
+  // Configuration file for [Liquid extension](https://marketplace.visualstudio.com/items?itemName=sissel.shopify-liquid)
+  // Supports Liquid syntax in CSS, SCSS, JS, MD, etc.
+  // Features include:
+  // - Syntax highlighting
+  // - Auto-completion
+  // - More
   "ignore": [
     {
       "type": "liquid",
