--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 exclude:
-  - CSS/Syntax Highlighter.scss
+  - css/Syntax Highlighter.scss
   - data/
   - includes/
   - layouts/
