--- a/_config.yml
+++ b/_config.yml
@@ -154,7 +154,7 @@ plugins:
 #     - vendor/gems/
 #     - vendor/ruby/
 exclude:
-    - CSS/Syntax Highlighter.scss
+    - css/Syntax Highlighter.scss
     - data/
     - includes/
     - layouts/
