Integrate structure workaround for CSS file[s]
Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ plugins:
 #     - vendor/gems/
 #     - vendor/ruby/
 exclude:
-    - CSS/Syntax Highlighter.scss
+    - css/Syntax Highlighter.scss
     - data/
     - includes/
     - layouts/
