Integrate custom minima theme
The custom minima theme supports the desired site directory structure

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,7 @@ whitelist: []
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Plugins
 #--------
@@ -190,7 +191,8 @@ markdown: kramdown
 
 # Theme
 # The theme to be used during site generation.
-theme: minima
+# theme: minima
+remote_theme: chaoscommencer/minima@b6dccad # 119c5c372e2e9df92cfe454287b664b29
 
 # Compilers
 #----------
