--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,7 @@ whitelist: []
 plugins:
     - jekyll-feed
     - jekyll-seo-tag
+    - jekyll-remote-theme
 
 # Plugins
 #--------
@@ -192,7 +193,8 @@ markdown: kramdown
 
 # Theme
 # The theme to be used during site generation.
-theme: minima
+# theme: minima
+remote_theme: chaoscommencer/minima@b6dccad # 119c5c372e2e9df92cfe454287b664b29
 
 # Compilers
 #----------
