Update package dependencies
- Update Gemfiles and .ruby-version with latest versions of depency packages

NOTE: Favor supporting latest Jekyll version over GitHub Pages plugin
Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -185,8 +185,8 @@ highlighter: rouge
 # WARNING: Use of custom [Markdown] processors is prohibited in safe mode and
 # will cause the build to fail.  When in safe mode, use built-in kramdown
 # Markdown processor instead.
-markdown: CommonMarkGhPages # Leverages CommonMark
-# markdown: kramdown
+# markdown: CommonMarkGhPages # Leverages CommonMark
+markdown: kramdown
 
 # Theme
 # The theme to be used during site generation.
