Update recommended extensions
- Update reference URL
- Replace deprecated Browser-Preview with Live Server
- Remove deprecated Bracket Pair Colorizer (now integrated into VS Code)
- Remove unused VS Code NPM Script, since NPM is not used in this repository
- Remove Shell Launcher (now integrated into VS Code)
- Replace deprecated Better Align with non-deprecated variant

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,24 +1,21 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=827846
+    // See https://code.visualstudio.com/docs/editor/extension-marketplace#_workspace-recommended-extensions
     // for the documentation about the extensions.json format
     "recommendations": [
         "aaron-bond.better-comments",
         // "alefragnani.project-manager",
-        "auchenberg.vscode-browser-preview",
+        "Chouzz.vscode-better-align",
         // "christian-kohler.npm-intellisense",
         "christian-kohler.path-intellisense",
-        "CoenraadS.bracket-pair-colorizer-2",
         "DavidAnson.vscode-markdownlint",
         "dbaeumer.vscode-eslint",
         "eamodio.gitlens",
-        // "eg2.vscode-npm-script",
         "formulahendry.auto-rename-tag",
         "mrmlnc.vscode-scss",
+        "ms-vscode.live-server",
         "psioniq.psi-header",
         "sissel.shopify-liquid",
-        "Tyriar.shell-launcher",
         "WallabyJs.quokka-vscode",
-        "wwm.better-align",
-        "yzhang.markdown-all-in-one",
+        "yzhang.markdown-all-in-one"
     ]
 }
