--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,6 +10,7 @@
         "DavidAnson.vscode-markdownlint",
         "dbaeumer.vscode-eslint",
         "eamodio.gitlens",
+        "EditorConfig.EditorConfig",
         "formulahendry.auto-rename-tag",
         "mrmlnc.vscode-scss",
         "ms-vscode.live-server",
