Support language-based spell-checking suggestions
- Add Code Spell Checker extension for language-based spell-checking suggestions to recommended extensions
- Configure VS Code editor folder settings for en-US-based spell-checking suggestions

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,7 @@
         "ms-vscode.live-server",
         "psioniq.psi-header",
         "sissel.shopify-liquid",
+        "streetsidesoftware.code-spell-checker",
         "WallabyJs.quokka-vscode",
         "yzhang.markdown-all-in-one"
     ]
