Workaround for GitHub Pages compilation bug
- Include 'Source/' prefix in 'sass_dir' configuration

Resolves the following error:

```
Rendering: Source/CSS/style.scss
Pre-Render Hooks: Source/CSS/style.scss
Rendering Markup: Source/CSS/style.scss
github-pages 232 | Error: File to import not found or unreadable: Syntax Highlighter. Load paths: /usr/local/bundle/gems/minima-2.5.1/_sass /usr/local/bundle/gems/minima-2.5.1/_sass on line 6
```

Reference: [Bug](https://github.com/actions/jekyll-build-pages/issues/139)

WARNING: This change breaks local builds!!!

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins_dir: plugins
 sass:
     # SASS Directory
     # Change the directory where Jekyll will read SASS files.
-    sass_dir: css
+    sass_dir: source/css
     # Style
     # Change the output format for the generated CSS files.
     style: :compressed
