--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins_dir: Plugins
 sass:
     # SASS Directory
     # Change the directory where Jekyll will read SASS files.
-    sass_dir: Source/CSS
+    sass_dir: CSS
     # Line Comments
     # When true, include the line number and file name of the source in the
     # compiled CSS file.
