Resolve jekyll build error
Command `bundle _2.6.6_ exec jekyll build --trace --verbose` results in an error indicating a failure in SCSS conversion

To resolve this error (detailed below):
- Upgrade to Jekyll 4.4.1
- Switch to kramdown Markdown processor (since CommonMarkGhPages doesn't support newer versions of Jekyll)

```
Conversion error: Jekyll::Converters::Scss encountered an error while converting 'CSS/style.scss':
                    File to import not found or unreadable: Syntax Highlighter. Load path: /workspaces/StaticJekyllWebsiteTemplate-Public/vendor/bundle/ruby/3.3.0/gems/minima-2.5.1/_sass on line 5
/workspaces/StaticJekyllWebsiteTemplate-Public/vendor/bundle/ruby/3.3.0/gems/jekyll-sass-converter-1.5.2/lib/jekyll/converters/scss.rb:123:in `rescue in convert': File to import not found or unreadable: Syntax Highlighter. (Jekyll::Converters::Scss::SyntaxError)
Load path: /workspaces/StaticJekyllWebsiteTemplate-Public/vendor/bundle/ruby/3.3.0/gems/minima-2.5.1/_sass on line 5
```

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -207,8 +207,10 @@ highlighter: rouge
 # WARNING: Use of custom [Markdown] processors is prohibited in safe mode and
 # will cause the build to fail.  When in safe mode, use built-in kramdown
 # Markdown processor instead.
-markdown: CommonMarkGhPages # Leverages CommonMark
-# markdown: kramdown
+# WARNING: jekyll-commonmark-ghpages >= 0.5.1 depends on jekyll >= 3.9, < 4.0
+# and is not supported by modern versions of Jekyll (> 4.0)
+# markdown: CommonMarkGhPages # Leverages CommonMark
+markdown: kramdown
 
 # Theme
 # The theme to be used during site generation.
