Update SASS configuration
- Include `line_comments` parameter definition

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,10 @@ sass:
   # SASS Directory
   # Change the directory where Jekyll will read SASS files.
   sass_dir: CSS
+  # Line Comments
+  # When true, include the line number and file name of the source in the
+  # compiled CSS file.
+  line_comments: false
   # Style
   # Change the output format for the generated CSS files.
   # Options:
