--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,19 @@ sass:
   # - compressed
   # - expanded
   style: :compressed
+  # Source Map
+  # Specify when source maps should be generated.  Source map files map from
+  # the output .css file to the original .sass or .scss style sheets, enabling
+  # the browser to reconstruct the original source and present the
+  # reconstructed original in the debugger.
+  # Options:
+  # - never
+  #`- always (default)
+  # - development (only in Jekyll development environments)
+  # NOTE: Prefer to avoid source map generation in production environments.
+  # NOTE: Specify Jekyll environment (JEKYLL_ENV) at build time as follows:
+  # bundle _2.1.4_ exec "JEKYLL_ENV=production jekyll serve --trace --verbose"
+  sourcemap: development
 
 # Permalink
 # Defines the default URL format for pages, posts, and collections.  Supports
